<resources>
    <string name="app_name">寿康日历</string>
    <string name="app_launcher_name">Calendar</string>
    <string name="change_view">Change view</string>
    <string name="daily_view">Daily view</string>
    <string name="weekly_view">Weekly view</string>
    <string name="monthly_view">Monthly view</string>
    <string name="yearly_view">Yearly view</string>
    <string name="simple_event_list">Simple event list</string>
    <string name="no_upcoming_events_in_eventlist">Seems like you don\'t have any upcoming events.</string>
    <string name="add_some_events">You can add some with the Plus button at the bottom.</string>
    <string name="details">Details</string>
    <string name="go_to_today">Go to today</string>
    <string name="snooze">Snooze</string>
    <string name="widget_monthly">Calendar monthly</string>
    <string name="widget_list">Calendar event list</string>
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event">New Event</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="end_before_start">The event cannot end earlier than it starts</string>
    <string name="event_added">Event added successfully</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="filter_events_by_type">Filter events by type</string>
    <string name="please_fill_location">Please fill in a location to be shown on a map</string>
    <string name="repetition">Repetition</string>
    <string name="no_repetition">No repetition</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weeks_raw">weeks</string>
    <string name="months_raw">months</string>
    <string name="years_raw">years</string>
    <string name="repeat_till">Repeat till</string>
    <string name="forever">Forever</string>
    <string name="event_is_repeatable">The event is repeatable</string>
    <string name="selection_contains_repetition">The selection contains repeating events</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="repeat_till_date">Repeat till a date</string>
    <string name="repeat_x_times">Repeat x times</string>
    <string name="repeat_forever">Repeat forever</string>
    <string name="times">times</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_on">Repeat on</string>
    <string name="every_day">Every day</string>
    <string name="selected_days">On selected days</string>
    <string name="the_same_day">The same day</string>
    <string name="the_last_day">The last day</string>
    <string name="repeat_on_the_same_day">Repeat on the same day each month</string>
    <string name="repeat_on_the_last_day">Repeat on the last day of the month</string>
    <string name="repeat_every_m">Repeat every</string>
    <string name="every_m">Every</string>
    <string name="first_m">first</string>
    <string name="second_m">second</string>
    <string name="third_m">third</string>
    <string name="fourth_m">fourth</string>
    <string name="last_m">last</string>
    <string name="repeat_every_f">Repeat every</string>
    <string name="every_f">Every</string>
    <string name="first_f">first</string>
    <string name="second_f">second</string>
    <string name="third_f">third</string>
    <string name="fourth_f">fourth</string>
    <string name="last_f">last</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="birthdays">Birthdays</string>
    <string name="add_birthdays">Add contact birthdays</string>
    <string name="no_birthdays">No birthdays have been found</string>
    <string name="birthdays_added">Birthdays added successfully</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="add_anniversaries">Add contact anniversaries</string>
    <string name="no_anniversaries">No anniversaries have been found</string>
    <string name="anniversaries_added">Anniversaries added successfully</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder</string>
    <string name="at_start">At start</string>
    <string name="custom">Custom</string>
    <string name="before">before</string>
    <string name="minutes_raw">minutes</string>
    <string name="hours_raw">hours</string>
    <string name="days_raw">days</string>
    <string name="add_another_reminder">Add another reminder</string>
    <string name="event_reminders">提醒设置</string>
    <plurals name="minutes_before">
        <item quantity="one">%d minute before</item>
        <item quantity="other">%d minutes before</item>
    </plurals>
    <plurals name="hours_before">
        <item quantity="one">%d hour before</item>
        <item quantity="other">%d hours before</item>
    </plurals>
    <plurals name="days_before">
        <item quantity="one">%d day before</item>
        <item quantity="other">%d days before</item>
    </plurals>
    <string name="import_events">Import events</string>
    <string name="export_events">Export events</string>
    <string name="import_events_from_ics">Import events from an .ics file</string>
    <string name="export_events_to_ics">Export events to an .ics file</string>
    <string name="default_event_type">Default event type</string>
    <string name="export_past_events_too">Export past events too</string>
    <string name="include_event_types">Include event types</string>
    <string name="filename_without_ics">Filename (without .ics)</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="all_day">All-day</string>
    <string name="week">Week</string>
    <string name="event_types">Event types</string>
    <string name="add_new_type">Add a new type</string>
    <string name="edit_type">Edit type</string>
    <string name="type_already_exists">Type with this title already exists</string>
    <string name="color">Color</string>
    <string name="regular_event">Regular event</string>
    <string name="cannot_delete_default_type">Default event type cannot be deleted</string>
    <string name="select_event_type">Select an event type</string>
    <string name="move_events_into_default">Move affected events into the default event type</string>
    <string name="remove_affected_events">Permanently remove affected events</string>
    <string name="unsync_caldav_calendar">To remove a CalDAV calendar you have to unsynchronize it</string>
    <string name="holidays">Holidays</string>
    <string name="add_holidays">Add holidays</string>
    <string name="national_holidays">National holidays</string>
    <string name="religious_holidays">Religious holidays</string>
    <string name="holidays_imported_successfully">Holidays have been successfully imported into a new event type</string>
    <string name="importing_some_holidays_failed">Importing some events failed</string>
    <string name="importing_holidays_failed">Importing holidays failed</string>
    <string name="import_successfully">Importing success</string>
    <string name="import_some_failed">Importing partialy failed</string>
    <string name="import_failed">Import failed</string>
    <string name="downloading_importing">Please keep network,downloading..</string>
    <string name="manage_event_types">Manage event types</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="sunday_first">Sunday as first day</string>
    <string name="start_day_at">Start day at</string>
    <string name="end_day_at">End day at</string>
    <string name="week_numbers">Show week numbers</string>
    <string name="vibrate">Vibrate on reminder notification</string>
    <string name="reminder_sound_label">提醒提示音</string>
    <string name="no_ringtone_picker">No app capable of setting ringtone found</string>
    <string name="no_ringtone_selected">None</string>
    <string name="day_end_before_start">The day cannot end earlier than it starts</string>
    <string name="caldav_sync">CalDAV sync</string>
    <string name="event_lists">Event lists</string>
    <string name="display_past_events">Display events from the past</string>
    <string name="use_same_snooze">Always use same snooze interval</string>
    <string name="snooze_delay">Postpone reminder with Snooze by</string>
    <string name="widgets">Widgets</string>
    <string name="replace_description_with_location">Replace event description with location</string>
    <string name="delete_all_events">Delete all events</string>
    <string name="delete_all_events_confirmation">Are you sure you want to delete all events? This will leave your event types and other settings intact.</string>
    <string name="caldav">CalDAV</string>
    <string name="select_caldav_calendars">Select calendars to sync</string>
    <string name="manage_synced_calendars">Manage synced calendars</string>
    <string name="store_locally_only">Store locally only</string>
    <string name="refresh_caldav_calendars">Refresh CalDAV calendars</string>
    <string name="refreshing">Refreshing…</string>
    <string name="refreshing_complete">Refreshing complete</string>
    <string name="editing_calendar_failed">Editing calendar failed</string>
    <string name="syncing">Syncing…</string>
    <string name="synchronization_completed">Sync completed</string>
    <string name="title_intro_skcal">寿康日历</string>
    <string name="title_intro_sk">寿康学会</string>
    <string name="title_intro_donate">捐赠</string>
    <string name="title_intro_xiangyu">相遇疗法</string>
    <string name="str_intro_xiangyu">
           \t　　相遇疗法，是一颗心灵陪伴另外一颗心灵进行自我探索、自我觉悟、自我照亮内心的过程，然后烦恼之冰自然融化为智慧之水。
           \n\n\t　　相遇疗法，是寿康学会徐冉会长结合对佛法、道家思想、中医心理学、王凤仪学说、马丁布伯哲学思想，罗杰斯来访者中心疗法、非暴力沟通等的体会，综合提炼而成的本土化心理疗法，是对传统文化的创造性转化和创新性发展。
　　\n\n\t特点：不用说隐私，不用讲道理，效果不衰减，易学易用。
　　\n\n\t应用范围：烦恼，心因性疾病，亲子教育，考试减压，矛盾调解，突破销售障碍等诸多方面。
　　\n\n\t要点：用第二人称【你】，来表达身心状态；第二，实事求是。
　　\n\n\t例1、当孩子被同学误解而感到生气时，和孩子一起用【你】表达那个生气，就会有良好效果。
　　\n\n\t例2、久治不愈的腰疼，对腰说【你】疼，【你】不想要这个疼等。
　　\n\n\t例3、考试时，如果学生很焦虑紧张，可以让学生表达【你】焦虑、【你】紧张等。
　　\n\n\t更多更深入的信息：
　　\n\n\t相遇疗法QQ总群：155182377
　　\n\n\t相遇疗法网站：www.xiangyuliaofa.cn

    </string>
    <string name="str_credit_bignamelist">方伟坤老师</string>
    <string name="str_credit_subcatption">寿康学会会员和网友</string>
    <string name="str_credit_gongdehuixiang">所有功德回向给戒邪淫网和寿康学会的所有资助者、随喜者、参与者、见闻者、传播者，业障消除，福慧增长，尽此一报身，同生极乐国。</string>
    <string name="str_credit_donatenow">随喜乐捐</string>
    <string name="str_health_title1">脏腑心理病因\n基本取象规律</string>
    <string name="str_health_title2">身体部位\n取象规律</string>
    <string name="str_health_title3">部分感觉\n心情对应</string>
    <string name="str_health_originator">(选自王中平《心灵的潜能》-商丘寿康学会身心健康课题组整理)</string>
    <string name="customize_event_caption">自定义戒期(父母诞忌等)</string>
    <string name="customize_event_whomfor_label">关系</string>
    <string name="customize_event_whatfor_label">诞忌</string>
    <string name="customize_event_when">点击设置日期</string>
    <string name="customize_event_when_label">农历日期</string>
</resources>