<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/ll_intro_holder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/intro_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigger_text_size"
        android:textStyle="bold">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_intro_skcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_intro_skcal" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_intro_sk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_intro_sk" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_intro_xiangyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_intro_xiangyu" />

    </com.google.android.material.tabs.TabLayout>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_about_intro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:text="@string/str_intro_xiangyu" />

    <WebView
        android:id="@+id/wv_about_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
