<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_health_activity_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_navigation"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/health_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_topimage"
        android:paddingVertical="2sp"
        style="@style/MyTabLayoutTextAppearance">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_health_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_health_title1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_health_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_health_title2" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_health_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_health_title3" />

    </android.support.design.widget.TabLayout>



    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"/>

    <TextView android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF0000"
        android:text="No data"/>

    <TextView android:id="@+id/txt_health_originator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_health_originator"/>


    <include
        layout="@layout/bottom_contact_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
