<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/about_topimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/placeholder"
        android:scaleType="fitXY"/>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_credit_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_topimage"
        android:text="@string/str_credit_caption"
        android:textSize="@dimen/middle_text_size"/>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_credit_bignamelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_credit_caption"
        android:text="@string/str_credit_bignamelist"
        android:textSize="@dimen/big_text_size"/>


    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_credit_subcaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_credit_bignamelist"
        android:text="@string/str_credit_subcatption"
        android:textSize="@dimen/normal_text_size"
    />

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_credit_gongdehuixiang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_credit_subcaption"
        android:text="@string/str_credit_gongdehuixiang"
        android:textSize="@dimen/normal_text_size"
        />


    <Button
        android:id="@+id/btn_credit_donatenow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_credit_gongdehuixiang"
        android:drawableLeft="@drawable/ic_launcher_bg_transparent"
        android:text="@string/str_credit_donatenow"
        android:gravity="center"
        android:textColor="@color/theme_light_text_color"
        android:layout_centerInParent="true"
        />

    <include
        layout="@layout/bottom_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
