<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_credit_holder">

    <LinearLayout
        android:id="@+id/ll_credits_holder1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/normal_icon_size"
        android:paddingBottom="@dimen/normal_margin">

        <TextView
            android:id="@+id/txt_credit_bignamelist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_credit_bignamelist"
            android:textSize="@dimen/big_text_size" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:src="@drawable/liuheyuan1" />
    </LinearLayout>

    <include layout="@layout/divider"
        android:id="@+id/about_credit_divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ll_credits_holder1"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin" />



    <LinearLayout
        android:id="@+id/ll_credits_holder2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_credit_divider1"
        android:gravity="left|center_vertical"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_icon_size">

        <TextView
            android:id="@+id/txt_credit_subcaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_credit_subcatption"
            android:textSize="@dimen/big_text_size" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sk_banner" />
    </LinearLayout>>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/txt_credit_gongdehuixiang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_credits_holder2"
        android:text="@string/str_credit_gongdehuixiang"
        android:textSize="@dimen/normal_text_size"
        />

</RelativeLayout>
